# gnu-libs-with-msvc

./: .gitignore  .gitmodules  BUILD.md  PACKAGES.md  README.md  STATIC.md  libs-with-msvc.sh  msvc-build.sh  progs-with-msvc.sh
config/: README.md  dirs.sh  flags.sh  options.sh  packages.sh
include/: README.md  cmake.sh  config.sh  devenv.sh  dirs.sh  env.sh  flags.sh  make.sh  meson.sh  options.sh  post_install.sh  set_package_vars.sh  stage1.sh  stage2.sh  stage3.sh  stage_vars.sh  tools.sh  verify.sh
patches/: README.md
patches/bzip2/: README.md  meson.build
patches/winpthreads/: README.md  meson.build
templates/: README.md  TEMPLATES.md  cmake.sh  make.sh  meson.sh
